@@ -1,3 +1,8 @@
+2018-08-08 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCloop.c:
+	  Fix bug #2794.
+
 2018-08-06 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/gcc-torture-execute-pr85529-1.c:
